# fork-eater

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  build.ps1  run.ps1  test_exit.ps1  test_exit.sh  vcpkg.json
docs/: README.md
docs/features/: audio-playback.md  camera-system.md  data-buffers.md  preprocessor-cli.md  raymarching-libraries.md
include/: AudioSystem.h  FileWatcher.h  Logger.h  ShaderEditor.h  ShaderManager.h  ShaderPreprocessor.h  ShaderProject.h  Timeline.h
libs/: camera.glsl  color.glsl  raymarching.glsl  raymarching_vec2.glsl  raymarching_vec3.glsl
project/test/: 4k-eater.project
project/test/shaders/: simple.frag
src/: AudioSystem.cpp  FileWatcher.cpp  FileWatcher_linux.cpp  FileWatcher_win.cpp  Logger.cpp  ParameterPanel.cpp  Settings.cpp  ShaderEditor.cpp  ShaderManager.cpp  ShaderPreprocessor.cpp  ShaderProject.cpp  main.cpp
templates/basic/: basic.frag
templates/mouse/: manifest.json  mouse.frag
templates/music/: music.frag
templates/raymarching/: raymarching.frag
templates/raymarching_basic/: manifest.json  raymarching.frag
templates/raymarching_vec2/: manifest.json  raymarching.frag
templates/simple/: simple.frag
templates/test_include/: test_include.frag
templates/test_lib/: test_lib.frag
test_project/: uniforms.json
vscode-extension/schemas/: project-schema.json
